--- a/reflex-dom-template.cabal
+++ b/reflex-dom-template.cabal
@@ -17,5 +17,6 @@ library
                      , text
                      , lens
                      , html-parse
+                     , mtl
   hs-source-dirs:      src
   default-language:    Haskell2010
