--- a/reflex-dom-template.cabal
+++ b/reflex-dom-template.cabal
@@ -17,6 +17,7 @@ library
                      , text
                      , lens
                      , html-parse
+                     , html-entities
                      , mtl
   hs-source-dirs:      src
   default-language:    Haskell2010
