--- a/reflex-dom-template.cabal
+++ b/reflex-dom-template.cabal
@@ -10,14 +10,21 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Reflex.Dom.Template
-                     , Reflex.Dom.Template.Internal
+                     , Reflex.Dom.Template.Rule
+                     , Reflex.Dom.Template.Error
+                     , Reflex.Dom.Template.ReflexToken
+                     , Reflex.Dom.Template.ReflexToken.Parse
+                     , Reflex.Dom.Template.ReflexToken.Render
+                     , Reflex.Dom.Template.Xhr
   build-depends:       base >=4.9 && <4.11
-                     , reflex-dom-core
-                     , containers
-                     , text
-                     , lens
-                     , html-parse
+                     , containers >=0.5 && <0.6
+                     , dependent-map >= 0.2 && < 0.3
                      , html-entities
-                     , mtl
+                     , html-parse
+                     , lens
+                     , mtl >= 2.2 && < 2.3
+                     , reflex >= 0.5 && < 0.6
+                     , reflex-dom-core >= 0.4 && < 0.5
+                     , text >= 1.2 && < 1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
