--- a/reflex-dom-template.cabal
+++ b/reflex-dom-template.cabal
@@ -16,15 +16,19 @@ library
                      , Reflex.Dom.Template.ReflexToken.Parse
                      , Reflex.Dom.Template.ReflexToken.Render
                      , Reflex.Dom.Template.Xhr
-  build-depends:       base >=4.9 && <4.11
-                     , containers >=0.5 && <0.6
+  build-depends:       base >=4.9 && <4.13
+                     , containers >=0.5 && <0.7
                      , dependent-map >= 0.2 && < 0.3
-                     , html-entities
-                     , html-parse
-                     , lens
+                     , html-entities >= 1.1 && < 1.2
+                     , html-parse >= 0.2.0 && < 0.3
+                     , lens >= 4.15.4 && < 4.17
                      , mtl >= 2.2 && < 2.3
                      , reflex >= 0.5 && < 0.6
                      , reflex-dom-core >= 0.4 && < 0.5
                      , text >= 1.2 && < 1.3
   hs-source-dirs:      src
+  ghc-options:         -Wall
+  if impl(ghcjs -any)
+    ghc-options:         -dedupe
+    cpp-options:         -DGHCJS_BROWSER
   default-language:    Haskell2010
