--- a/reflex-dom-template.cabal
+++ b/reflex-dom-template.cabal
@@ -27,7 +27,7 @@ library
                      , reflex-dom-core >= 0.4 && < 0.5
                      , text >= 1.2 && < 1.3
   hs-source-dirs:      src
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
   if impl(ghcjs -any)
     ghc-options:         -dedupe
     cpp-options:         -DGHCJS_BROWSER
